cmake_minimum_required(VERSION 3.10)
project(hexagon)
set(CMAKE_CXX_STANDARD 20)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_find")
include(boilerplate)

option(OPT_LOGGING "Build with logging"  OFF)

find_package(idasdk REQUIRED)
find_package(gnutools REQUIRED)

add_library(hexagon SHARED hexagon.cpp bfd_funcs.cpp dummy-scan.c)
target_compile_definitions(hexagon PUBLIC __IDP__)
if (OPT_LOGGING)
    target_compile_definitions(hexagon PUBLIC TRACELOG)
endif()
target_link_libraries(hexagon idasdk32)
target_link_libraries(hexagon gnutools)
set_target_properties(hexagon PROPERTIES PREFIX "")
if (WIN32)
    target_link_options(hexagon INTERFACE -export:LPH)
endif()

add_library(hexagon64 SHARED hexagon.cpp bfd_funcs.cpp dummy-scan.c)
target_compile_definitions(hexagon64 PUBLIC __IDP__)
if (OPT_LOGGING)
    target_compile_definitions(hexagon64 PUBLIC TRACELOG)
endif()
target_link_libraries(hexagon64 idasdk64)
target_link_libraries(hexagon64 gnutools)
set_target_properties(hexagon64 PROPERTIES PREFIX "")
if (WIN32)
    target_link_options(hexagon64 INTERFACE -export:LPH)
endif()

